--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "mysql2": "^3.3.2",
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
